<resources>
    <string name="app_name">果仁空间</string>
    <string name="download_failure">Download latest version failure !</string>
    <string name="apk_file_not_exists">Apk file not exists !</string>
    <string name="is_latest_version_label">Your app is the latest version</string>
    <string name="latest_version_time">Release time: %1$s</string>
    <string name="network_not_activated">Cannot connected to server,please retry again....</string>
    <string name="latest_version_title">Last version available(%1$s)</string>
    <string name="update_latest_version_title">Latest version available(%1$s), updating…</string>
    <string name="later_on_wifi">Auto Update later when on wifi</string>
    <string name="later_update_tip">"Updating… (Submited when you'r NOT on Wifi)"</string>
    <string name="update">Update</string>
    <string name="ignore">Ignore</string>
    <string name="instapager_login_html" formatted="false">&lt;!DOCTYPE html> &lt;html> &lt;head> &lt;meta content=\"text/html; charset=utf-8\" http-equiv=\"Content-Type\"> &lt;meta content=\"width=device-width,minimum-scale=1,maximum-scale=1,initial-scale=1,user-scalable=no\" id=\"viewport\" name=\"viewport\"> &lt;meta content=\"yes\" name=\"apple-mobile-web-app-capable\"> &lt;title>%s&lt;/title> &lt;style type=\"text/css\"> body{margin:0;padding:0} .inputstyle { -webkit-tap-highlight-color:rgba(255,255,255,0); width:100%%; height:44px; color:#000; background:0; border:0; font-size:16px; outline: none; -webkit-appearance:none } .btn { width:90%%; height:44px; line-height:44px; background:#A0C035; border:0; border-radius:4px; color:#fff; font-size:16px; text-align:center; margin-top:15px; display:block } .btn:disabled { background: #dddddd; } .error { color:red; } &lt;/style> &lt;/head> &lt;body> &lt;script type=\"text/javascript\"> function login(form){ var u=form[\"u\"].value,p=form[\"p\"].value; if(!u || !p) return false; form[\"s\"].disabled = true; return true; } &lt;/script> &lt;form style=\"margin-top:45px;\" action=\"%s\" metho=\"get\" onsubmit=\"return login(this);\"> %s &lt;div style=\"padding-left:15px;border-top:1px solid #E3E3E5;border-bottom:1px solid #E3E3E5;\"> &lt;input type=\"hidden\" name=\"ID_SIGN\" value=\"OWELJSFPWECSFEW\"/> &lt;input class=\"inputstyle\" id=\"u\" name=\"u\" type=\"text\" value=\"%s\" placeholder=\"%s\" style=\"border-bottom:1px solid #E3E3E5;\"/> &lt;input class=\"inputstyle\" id=\"p\" name=\"p\" type=\"password\" placeholder=\"%s\"/> &lt;/div> &lt;p>&lt;input style=\"margin:0 auto;\" type=\"submit\" name=\"s\" value=\" %s \" class=\"btn\"/>&lt;/p> &lt;/form> &lt;/body> &lt;/html></string>
    <string name="cancel">取消</string>
    <string name="finish">Finish</string>
    <string name="sharing">Sharing operation is working in the background…</string>
    <string name="share_to">Share to</string>
    <string name="share">Share</string>
    <string name="multi_share">Photo Sharing</string>
    <string name="share_completed">Operation succeeded</string>
    <string name="share_canceled">Operation canceled</string>
    <string name="select_one_plat_at_least">Please select a target platform</string>
    <string name="list_friends">Friends on %s</string>
    <string name="share_failed">Operation failed</string>
    <string name="pull_to_refresh">Pull down to refresh</string>
    <string name="release_to_refresh">Release to refresh</string>
    <string name="refreshing">Refreshing…</string>
    <string name="shake2share">Shake your phone!</string>
    <string name="select_a_friend">Please select a friend</string>
    <string name="weibo_oauth_regiseter">Authorization</string>
    <string name="website">http://www.mob.com</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="wechat_client_inavailable">Wechat client not exists or the version is too low</string>
    <string name="google_plus_client_inavailable">Google+ client not exists or the version is too low</string>
    <string name="qq_client_inavailable">Mobile QQ client not exists or the version is too low</string>
    <string name="pinterest_client_inavailable">Pinterest client not exists or the version is too low</string>
    <string name="instagram_client_inavailable">Instagram client not exists or the version is too low</string>
    <string name="yixin_client_inavailable">Yixin client not exists or the version is too low</string>
    <string name="line_client_inavailable">Line client not exists or the version is too low</string>
    <string name="kakaotalk_client_inavailable">KakaoTalk client not exists or the version is too low</string>
    <string name="kakaostory_client_inavailable">KakaoStory client not exists or the version is too low</string>
    <string name="whatsapp_client_inavailable">WhatsApp client not exists or the version is too low</string>
    <string name="sinaweibo">Sina Weibo</string>
    <string name="tencentweibo">Tencent Weibo</string>
    <string name="qzone">QZone</string>
    <string name="wechat">Wechat</string>
    <string name="wechatmoments">Wechat Moments</string>
    <string name="wechatfavorite">Wechat Favorite</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="renren">Renren</string>
    <string name="kaixin">Kaixin</string>
    <string name="email">邮箱</string>
    <string name="shortmessage">Short Message</string>
    <string name="sohumicroblog">Sohu Microblog</string>
    <string name="sohusuishenkan">Sohu Suishenkan</string>
    <string name="neteasemicroblog">Netease Microblog</string>
    <string name="douban">Douban</string>
    <string name="youdao">Youdao</string>
    <string name="evernote">Evernote</string>
    <string name="linkedin">Linked in</string>
    <string name="googleplus">Google+</string>
    <string name="foursquare">FourSquare</string>
    <string name="qq">QQ</string>
    <string name="pinterest">Pinterest</string>
    <string name="flickr">Flickr</string>
    <string name="tumblr">Tumblr</string>
    <string name="dropbox">Dropbox</string>
    <string name="vkontakte">VK</string>
    <string name="instagram">Instagram</string>
    <string name="yixin">Yixin</string>
    <string name="yixinmoments">Yixin Moments</string>
    <string name="mingdao">Mingdao</string>
    <string name="kakaotalk">KakaoTalk</string>
    <string name="kakaostory">KakaoStory</string>
    <string name="line">Line</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="pocket">Pocket</string>
    <string name="instapaper">Instapaper</string>
    <string name="instapaper_email">Email</string>
    <string name="instapaper_pwd">Password</string>
    <string name="instapaper_login">Sign In</string>
    <string name="instapaper_logining">Sign In…</string>
    <string name="instapager_email_or_password_incorrect">Email or Password incorrect</string>
    <string name="facebookmessenger">Facebook Messenger</string>
    <string name="share_to_qzone">Share To QZone</string>
    <string name="share_to_qq">Share To QQ</string>
    <string name="mingdao_share_content">Share webpage</string>
    <string name="share_to_mingdao">Share To Mingdao</string>
    <string name="share_to_qzone_default">Shared from %s</string>
    <string name="use_login_button">use login button instead</string>
    <string name="page_welcome">WelcomePage</string>
    <string name="page_game">GamePage</string>
    <string name="page_game_detail">GameDetailPage</string>
    <string name="page_game_play">GamePlayPage</string>
    <string name="page_order">RankPage</string>
    <string name="page_hall">HallPage</string>
    <string name="page_cartoon">CartoonPage</string>
    <string name="page_cartoon_detail">CartoonDetailPage</string>
    <string name="page_jokes">JokePage</string>
    <string name="page_jokes_detail">JokeDetailPage</string>
    <string name="page_welfare">WelfarePage</string>
    <string name="page_welfare_detail">WelfareDetailPage</string>
    <string name="page_user_center">UserPage</string>
    <string name="page_user_register">UserRegisterPage</string>
    <string name="page_user_login">UserLoginPage</string>
    <string name="page_user_detail">UserLoginedPage</string>
    <string name="page_user_head">UserHeadPage</string>
    <string name="page_user_task">UserTaskPage</string>
    <string name="page_user_feedback">UserFeedbackPage</string>
    <string name="event_play_game">play_game</string>
    <string name="event_show_cartoon">show_cartoon</string>
    <string name="event_show_welfare">show_welfare</string>
    <string name="game">游戏</string>
    <string name="order">排行</string>
    <string name="hall">金玩-多人游戏社区</string>
    <string name="cartoon">漫画</string>
    <string name="jokes">笑话</string>
    <string name="welfare">发现</string>
    <string name="task">任务列表</string>
    <string name="playnum" />
    <string name="zan">赞</string>
    <string name="cai">踩</string>
    <string name="fenxiang">分享</string>
    <string name="youxijietu">游戏截图</string>
    <string name="youxijieshao">游戏介绍</string>
    <string name="youxituijian">游戏推荐</string>
    <string name="expand">展开</string>
    <string name="ok">确认</string>
    <string name="txt_loading">正在加载</string>
    <string name="common_network_refresh">获取数据失败，请点击刷新</string>
    <string name="loading_list_null">没有搜索到匹配数据！</string>
    <string name="loading_text">正在加载...</string>
    <string name="loading_failed">加载失败了,点击重新加载</string>
    <string name="loading_to_bottom">拉到底啦</string>
    <string name="overefresh_pulltorefresh">下拉可以刷新</string>
    <string name="overefresh_releasetorefresh">松开可以刷新</string>
    <string name="overefresh_update">更新于</string>
    <string name="overefresh_loading">加载中…</string>
    <string name="new_game_text">最新上线</string>
    <string name="hot_game_text">最火游戏</string>
    <string name="jokes1_title">内涵话</string>
    <string name="jokes2_title">冷笑话</string>
    <string name="hot_watch">人看过</string>
    <string name="jokes_info">来自：%1$s|发布时间：%2$s</string>
    <string name="descr_image">Image</string>
    <string name="ask">用户反馈</string>
    <string name="commint">提交反馈信息</string>
    <string name="ask_tip">欢迎您提出宝贵的意见和建议，我们将根据您的反馈意见尽快改善产品和服务。</string>
    <string name="feedback_hint">您好，请描述您遇到的问题...</string>
    <string name="signup_title">新用户注册</string>
    <string name="user_name_title">用户名：</string>
    <string name="user_name_hint">邮箱</string>
    <string name="user_search_name_hint">输入您的用户名</string>
    <string name="user_email_identifycode_hint">请输入邮箱验证码</string>
    <string name="user_email_send_success">邮件发送成功，15分钟内有效</string>
    <string name="input_user_password_hint">输入密码</string>
    <string name="repeat_input_user_password_hint">重复输入密码</string>
    <string name="user_nickname_hint">昵称</string>
    <string name="password_title">密码:</string>
    <string name="password_hint">密码</string>
    <string name="password_check_title">确认密码:</string>
    <string name="password_check_hint">重复输入您的密码</string>
    <string name="captcha_title">验证码:</string>
    <string name="captcha_hint">右边图片的文字</string>
    <string name="read_and_agree">已阅读并同意</string>
    <string name="clause_privacy">使用条款和隐私政策</string>
    <string name="change_image">换一张</string>
    <string name="signup_now">立即注册</string>
    <string name="signup">注册</string>
    <string name="search_pwd">找回密码</string>
    <string name="user_name_empty">请填写您的用户名</string>
    <string name="user_captcha_empty">验证码不能为空</string>
    <string name="user_name_format_error">请输入邮箱作为您的账号</string>
    <string name="user_name_len_error">用户名为 5-30字符</string>
    <string name="user_nickname_empty">请填写您的昵称</string>
    <string name="user_nickname_len_error">用户昵称名为 5-12字符</string>
    <string name="password_empty">请设置您的密码</string>
    <string name="password_len_error">密码为6-30字符</string>
    <string name="login">登录</string>
    <string name="forget_password_hint">忘记密码？</string>
    <string name="using_others_login">使用其他方式登录</string>
</resources>